[package]
name = "realtime-options-ticker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
actix-web = "4.0"  # If using Actix for web UI
# yew = "0.18"  # Uncomment if using Yew for web UI
# futures = "0.3"  # Uncomment if using futures for async programming
# websocket = "0.26"  # Uncomment if using WebSocket for real-time updates